# raspi-sentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: labels.yml
.github/ISSUE_TEMPLATE/: beta-failure-report.yml  config.yml
.github/workflows/: ci.yml  pypi.yml  release.yml  sync-labels.yml
config/: raspi-sentinel.beta-demo.toml  raspi-sentinel.example.toml
config/examples/: lightweight-pi.toml  no-discord.toml  production.toml  tmpfs-tiered.toml
docker/: Dockerfile.dryrun  entrypoint-dryrun.sh
docs/: README.md  SECURITY.ja.md  UPGRADE.ja.md  UPGRADE.md  VERSIONING.md  output-contract.md  storage-tiers.md  time-health-decision-table.md  watchdog.md
docs/facts/: README.md  architecture.md  config-and-checks-refactor-2026-04-18.md  data-contracts.md  exit-codes.md  improvement-status.md  operations-runbook.md  review-followup-2026-04-18.md  test-map.md
docs/history/: README.md  config-and-checks-refactor-2026-04-18.md  review-followup-2026-04-18.md  review-followup-2026-04-26.md
docs/principles/: README.md  engineering-decisions.md  recovery-philosophy.md
docs/release-notes/: README.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.8.0-draft.md  v0.8.0.md  v0.9.0.md
docs/schemas/: state.schema.json  stats.schema.json
examples/watchdog/: raspi-sentinel-watchdog-integration.service
scripts/: beta_smoke_check.sh  deploy_pi5_guard.py  failure_inject.py  install_systemd.py  prepush_check.sh
systemd/: raspi-sentinel-tmpfs-verify.service  raspi-sentinel.service  raspi-sentinel.timer  run-raspi\x2dsentinel.mount
tests/: checks_internal_branches_helpers.py  conftest.py  test_checks.py  test_checks_internal_branches.py  test_checks_internal_file_command.py  test_checks_internal_network.py  test_checks_internal_stats_and_progress.py  test_cli_behavior.py  test_config_state.py  test_config_summary.py  test_config_validation.py  test_config_validation_branches.py  test_cycle_notifications.py  test_engine_integration.py  test_main_entry.py  test_monitor_stats.py  test_notify.py  test_policy.py  test_public_secret_scan.py  test_recovery.py  test_recovery_internal_branches.py  test_state_models.py  test_state_models_coverage.py  test_status_classification.py  test_time_health.py  test_version.py
tools/: check_public_secrets.py
(+70 files in other folders)
