[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "raspi-sentinel"
version = "0.2.0"
description = "Standalone staged self-healing layer for Raspberry Pi systemd services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "raspi-sentinel maintainers" }
]
dependencies = []

[project.scripts]
raspi-sentinel = "raspi_sentinel.cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
