[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "raspi-sentinel"
dynamic = ["version"]
description = "Standalone staged self-healing layer for Raspberry Pi systemd services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "raspi-sentinel maintainers" }
]
dependencies = []

[project.scripts]
raspi-sentinel = "raspi_sentinel.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "raspi_sentinel._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
